# tarsier

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MULTI_AGENT_AGENT_INSTRUCTIONS.md  MULTI_AGENT_AGENT_INSTRUCTIONS_PHASE2.md  MULTI_AGENT_AGENT_INSTRUCTIONS_PHASE3.md  MULTI_AGENT_EXECUTION_BOARD.md  MULTI_AGENT_EXECUTION_BOARD_PHASE2.md  MULTI_AGENT_EXECUTION_BOARD_PHASE3.md  MULTI_AGENT_EXECUTION_BOARD_PHASE4.md  README.md  SECURITY.md  UX_ROADMAP_STATUS.md  deny.toml  install.sh  justfile  mutants.toml
.github/: CODEOWNERS  (+2 more)
crates/tarsier-certcheck/: Cargo.toml  README.md
crates/tarsier-certcheck/src/: main.rs  tests.rs
crates/tarsier-certcheck/tests/: integration.rs
crates/tarsier-cli/: Cargo.toml  README.md
crates/tarsier-cli/src/: cli.rs  main.rs  tests.rs  tui.rs  types.rs
crates/tarsier-cli/src/commands/: analyze.rs  codegen.rs  compose.rs  conformance.rs  equivalence.rs  governance.rs  helpers.rs  invariant.rs  lint.rs  mod.rs  proof_export.rs  prove.rs  refinement.rs  verify.rs  visualize.rs  watch.rs  witness_format.rs
crates/tarsier-cli/tests/: beginner_onboarding_contract.rs  cli_feature_contract_default.rs  cli_feature_contract_governance.rs  codegen_verified.rs  governance_bundle_verify.rs  governance_pipeline.rs  liveness_contract.rs  sandbox_security.rs
crates/tarsier-cli/tests/golden/: proof_export_coq.golden  proof_export_lean.golden
crates/tarsier-codegen/: Cargo.toml  README.md
crates/tarsier-codegen/src/: common.rs  go_gen.rs  lib.rs  rust_gen.rs  trace_hooks.rs  trace_oracle.rs
crates/tarsier-codegen/src/go_gen/: tests.rs
crates/tarsier-codegen/src/rust_gen/: tests.rs
crates/tarsier-codegen/tests/: integration.rs  semantic_go.rs  semantic_rust.rs  trace_oracle.rs
crates/tarsier-conformance/: Cargo.toml  README.md
crates/tarsier-conformance/src/: active.rs  adapters.rs  checker.rs  lib.rs  manifest.rs  network_shim.rs  obligations.rs  replay.rs
crates/tarsier-conformance/src/adapters/: tests.rs
crates/tarsier-conformance/src/checker/: tests.rs
crates/tarsier-conformance/tests/: adapter_replay.rs  reference_traces.rs
crates/tarsier-conformance/tests/fixtures/: guard_not_satisfied.json  multi_process_valid.json  no_matching_rule.json  simple_vote.trs  valid_trace.json
crates/tarsier-dsl/: Cargo.toml  README.md
crates/tarsier-dsl/benches/: parser_bench.rs
crates/tarsier-dsl/src/: ast.rs  errors.rs  grammar.pest  lib.rs  parser.rs
crates/tarsier-dsl/src/ast/: tests.rs
crates/tarsier-dsl/src/parser/: mod.rs  tests.rs
crates/tarsier-dsl/tests/: integration.rs
crates/tarsier-engine/: Cargo.toml  README.md
crates/tarsier-engine/benches/: engine_bench.rs  pdr_perf.rs  solver_perf.rs
crates/tarsier-engine/src/: compositional.rs  counterexample.rs  export_ta.rs  lib.rs  pipeline.rs  property_pipeline_unit_tests.rs  result.rs  sandbox.rs  visualization.rs
crates/tarsier-engine/src/compositional/: tests.rs
crates/tarsier-engine/src/counterexample/: tests.rs
crates/tarsier-engine/src/export_ta/: tests.rs
crates/tarsier-engine/src/pipeline/: analysis.rs  certification.rs  diagnostics.rs  mod.rs  proof_export.rs  property.rs  stages.rs  tests.rs
crates/tarsier-engine/src/result/: comm_complexity.rs  liveness_unknown.rs  tests.rs
crates/tarsier-engine/src/sandbox/: tests.rs
crates/tarsier-engine/tests/: adversary_model_tests.rs  cegar_tests.rs  certificate_tests.rs  corpus_tests.rs  end_to_end_pipeline.rs  faithful_tests.rs  integration_tests.rs  invariant_inference_e2e.rs  liveness_integration.rs  liveness_tests.rs  multi_quant_temporal_matrix.rs  por_tests.rs  property_pipeline_proptest.rs  proptest_encoding.rs  proptest_lowering.rs  proptest_smt_encoder.rs  quantitative_tests.rs  safety_tests.rs  temporal_encoding_perf.rs  timed_liveness_matrix.rs  unbounded_safety_tests.rs
crates/tarsier-engine/tests/common/: mod.rs
crates/tarsier-ir/: Cargo.toml  README.md
crates/tarsier-ir/benches/: lowering_bench.rs
crates/tarsier-ir/src/: abstraction.rs  composition.rs  counter_system.rs  equivalence.rs  lib.rs  lowering.rs  product.rs  properties.rs  proptest_generators.rs  refinement.rs  runtime_trace.rs  threshold_automaton.rs
crates/tarsier-ir/src/lowering/: config.rs  counters.rs  guards.rs  helpers.rs  messages.rs  mod.rs  tests.rs  validation.rs
crates/tarsier-ir/src/threshold_automaton/: tests.rs
crates/tarsier-ir/tests/: equivalence_tests.rs  refinement_tests.rs
crates/tarsier-lsp/: Cargo.toml  README.md
crates/tarsier-lsp/src/: code_actions.rs  completion.rs  diagnostics.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  lib.rs  main.rs  navigation.rs  semantic_tokens.rs  symbol_analysis.rs  tests.rs  utils.rs
crates/tarsier-lsp/src/symbol_analysis/: tests.rs
crates/tarsier-lsp/tests/: extended_protocol_tests.rs  protocol_tests.rs
crates/tarsier-prob/: Cargo.toml  README.md
crates/tarsier-prob/src/: committee.rs  hypergeometric.rs  lib.rs
crates/tarsier-proof-kernel/: Cargo.toml  README.md
crates/tarsier-proof-kernel/src/: lib.rs  tests.rs
crates/tarsier-smt/: Cargo.toml  README.md
crates/tarsier-smt/benches/: encoder_bench.rs
crates/tarsier-smt/src/: bmc.rs  encoder.rs  encoding_helpers.rs  equivalence_encoder.rs  lib.rs  refinement_encoder.rs  solver.rs  sorts.rs  terms.rs
crates/tarsier-smt/src/backends/: cvc5_backend.rs  mod.rs  smtlib_printer.rs  z3_backend.rs
crates/tarsier-smt/src/bmc/: tests.rs
crates/tarsier-smt/tests/: backend_parity.rs  equivalence_encoding_tests.rs  refinement_encoding_tests.rs  solver_parity_perf_expansions.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_parse/: reliable_broadcast.trs
fuzz/fuzz_targets/: fuzz_encode.rs  fuzz_lower.rs  fuzz_parse.rs  fuzz_proof_kernel.rs
playground/: Cargo.toml  README.md
playground/deploy/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
playground/src/: api.rs  assets.rs  main.rs  middleware.rs  security_tests.rs  tests.rs
playground/static/: app.js  codegen.js  index.html  visual-editor.js  visual-model.js
(+374 files in other folders)
