[workspace]
members = [
    "crates/tarsier-dsl",
    "crates/tarsier-ir",
    "crates/tarsier-smt",
    "crates/tarsier-prob",
    "crates/tarsier-proof-kernel",
    "crates/tarsier-certcheck",
    "crates/tarsier-engine",
    "crates/tarsier-codegen",
    "crates/tarsier-cli",
    "playground",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
