[workspace]
members = [
    "crates/tarsier-dsl",
    "crates/tarsier-ir",
    "crates/tarsier-smt",
    "crates/tarsier-prob",
    "crates/tarsier-proof-kernel",
    "crates/tarsier-certcheck",
    "crates/tarsier-engine",
    "crates/tarsier-codegen",
    "crates/tarsier-conformance",
    "crates/tarsier-cli",
    "crates/tarsier-lsp",
    "playground",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.92.0"
repository = "https://github.com/tarsier-verify/tarsier"
homepage = "https://github.com/tarsier-verify/tarsier"
keywords = ["formal-verification", "consensus", "byzantine", "model-checking", "threshold-automata"]
categories = ["development-tools", "science"]

[workspace.dependencies]
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
opt-level = 3
debug = false
