[package]
name = "tarsier-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tarsier-dsl = { path = "../crates/tarsier-dsl" }
tarsier-ir = { path = "../crates/tarsier-ir" }
tarsier-smt = { path = "../crates/tarsier-smt" }
tarsier-proof-kernel = { path = "../crates/tarsier-proof-kernel" }
serde_json = "1"

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_lower"
path = "fuzz_targets/fuzz_lower.rs"
doc = false

[[bin]]
name = "fuzz_encode"
path = "fuzz_targets/fuzz_encode.rs"
doc = false

[[bin]]
name = "fuzz_proof_kernel"
path = "fuzz_targets/fuzz_proof_kernel.rs"
doc = false
