[package]
name = "tarsier-playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tarsier-engine = { path = "../crates/tarsier-engine" }
tarsier-dsl = { path = "../crates/tarsier-dsl" }
tarsier-ir = { path = "../crates/tarsier-ir" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
