[package]
name = "tarsier-certcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-solver certificate replay checker"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "tarsier-certcheck"
path = "src/main.rs"

[dependencies]
tarsier-proof-kernel = { path = "../tarsier-proof-kernel", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2 = "0.10"
