[package]
name = "tarsier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Formal verification tool for distributed consensus protocols"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tarsier"
path = "src/main.rs"

[dependencies]
tarsier-dsl = { path = "../tarsier-dsl", version = "0.1.0" }
tarsier-ir = { path = "../tarsier-ir", version = "0.1.0", features = ["serialize"] }
tarsier-engine = { path = "../tarsier-engine", version = "0.1.0" }
tarsier-codegen = { path = "../tarsier-codegen", version = "0.1.0" }
tarsier-conformance = { path = "../tarsier-conformance", version = "0.1.0" }
tarsier-prob = { path = "../tarsier-prob", version = "0.1.0" }
tarsier-proof-kernel = { path = "../tarsier-proof-kernel", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
miette = { version = "7", features = ["fancy"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
ratatui = "0.29"
crossterm = "0.28"
ring = { version = "0.17", optional = true }

[features]
default = []
governance = ["dep:ring"]
