[package]
name = "tarsier-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language Server Protocol implementation for the Tarsier DSL"
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "tarsier-lsp"
path = "src/main.rs"

[dependencies]
tarsier-dsl = { path = "../tarsier-dsl", version = "0.1.0" }
tarsier-ir = { path = "../tarsier-ir", version = "0.1.0" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2"
pest_derive = "2"
similar = "2"
tracing.workspace = true

[dev-dependencies]
tower = "0.4"
